sending works sort of